# LLVM-Conversions

./: README.md
c-cpp-convert/singlefile-convert/helloworld/: hello-convert-commands.txt
c-cpp-convert/singlefile-convert/malloc/: malloc-convert-commands.txt  malloc.c
c-cpp-convert/wllvm-convert/: README.txt  c2llvm-setup.sh  c2llvm.sh
c-cpp-convert/wllvm-convert/cmake-project/: CMakeLists.txt  README.txt  cmake-convert-commands.txt  main.cpp
c-cpp-convert/wllvm-convert/cmake-project/include/: CMakeLists.txt
c-cpp-convert/wllvm-convert/cmake-project/include/MyCoolLib/: src1.h  src2.h
c-cpp-convert/wllvm-convert/cmake-project/lib/: CMakeLists.txt  src1.cpp  src2.cpp
c-cpp-convert/wllvm-convert/hw1-usecase/HW1/: CMakeLists.txt  hw1-convert-commands.txt  lab1_brewer.c  use-example.docx
c-cpp-convert/wllvm-convert/makefile-project/: Makefile  README.txt  makefile-convert-commands.txt
c-cpp-convert/wllvm-convert/makefile-project/src/utils/: myfunctions.h
fortran-convert/helloworld/: hello-convert-commands.txt  hello.f90
fortran-convert/multifile/: tabulate-convert-commands.txt
